# GstRearrange

./: .gitignore  README  configure.ac  memcheck.sh
debian/: .gitignore  changelog  control  copyright
src/: Makefile.am  gstrearrange.c  gstrearrange.h
